Fix warnings related to Java 9 deprecated methods